RESOLVED FIXED90083
LayoutUnit::epsilon() is wrong
https://bugs.webkit.org/show_bug.cgi?id=90083
Summary LayoutUnit::epsilon() is wrong
Behdad Esfahbod
Reported 2012-06-27 10:45:19 PDT
In platform/FractionalLayoutUnit.h: static float epsilon() { return 1 / kFixedPointDenominator; } That division is done as integers. So, if SUBPIXEL_LAYOUT is enabled, epsilon() always returns zero.
Attachments
Patch (1.37 KB, patch)
2012-06-27 13:16 PDT, Behdad Esfahbod
no flags
Behdad Esfahbod
Comment 1 2012-06-27 13:16:09 PDT
Emil A Eklund
Comment 2 2012-06-27 13:49:07 PDT
Looks good to me. While I'd like to see a test for this I realize it isn't really feasible to add one given that the method isn't actually used anywhere yet. Eric, could you use your magic reviewing powers on this one?
Eric Seidel (no email)
Comment 3 2012-07-02 14:50:09 PDT
Comment on attachment 149788 [details] Patch Happy to.
WebKit Review Bot
Comment 4 2012-07-02 15:41:49 PDT
Comment on attachment 149788 [details] Patch Clearing flags on attachment: 149788 Committed r121709: <http://trac.webkit.org/changeset/121709>
WebKit Review Bot
Comment 5 2012-07-02 15:41:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.