LayoutUnit::epsilon() is wrong https://bugs.webkit.org/show_bug.cgi?id=90083

Patch by Behdad Esfahbod <behdad@behdad.org> on 2012-07-02
Reviewed by Eric Seidel.

Do division in floats, not integers.

No new tests. No code using the affected function.

* platform/FractionalLayoutUnit.h:
(WebCore::FractionalLayoutUnit::epsilon):

Canonical link: https://commits.webkit.org/108269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121709 268f45cc-cd09-0410-ab3c-d52691b4dbfc